--- a/src/app/app.html
+++ b/src/app/app.html
@@ -185,8 +185,8 @@
 <app-header></app-header>
 
 <main class="main">
-  <div class="content">
-    <div class="left-side">
+  <!-- <div class="content"> -->
+    <!-- <div class="left-side">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 982 239"
@@ -232,10 +232,10 @@
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
-      <h1>Hello, {{ title() }}</h1>
+      <h1>{{ title() }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
-    </div>
-    <div class="divider" role="separator" aria-label="Divider"></div>
+    </div> -->
+    <!-- <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
       <div class="pill-group">
         @for (item of [
@@ -266,8 +266,8 @@
             </svg>
           </a>
         }
-      </div>
-      <div class="social-links">
+      </div> -->
+      <!-- <div class="social-links">
         <a
           href="https://github.com/angular/angular"
           aria-label="Github"
@@ -329,7 +329,7 @@
         </a>
       </div>
     </div>
-  </div>
+  </div> -->
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
