--- a/src/app/component/header/header.html
+++ b/src/app/component/header/header.html
@@ -11,6 +11,12 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>   
+                <li class="nav-item">
+                    <a class="nav-link" ariaCurrentWhenActive="page" routerLink="/table-multiplication"
+                        routerLinkActive="active">
+                        Table Multiplication
+                    </a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -25,7 +31,7 @@
                         </li>
                         <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
-                    
+
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
