Ajout component footer

--- a/src/app/component/header/header.html
+++ b/src/app/component/header/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-xl navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <h1>MyApp</h1>
+            <h1>MultiApp</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bstarget="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" arialabel="Toggle navigation">
