--- a/src/app/app.html
+++ b/src/app/app.html
@@ -339,5 +339,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
+<app-footer>  </app-footer>
 <router-outlet></router-outlet>
