Ajout des tables sur la page web

--- a/src/app/page-table-mult/page-table-mult.html
+++ b/src/app/page-table-mult/page-table-mult.html
@@ -1,1 +1,3 @@
-<p>page-table-mult works!</p>
+<app-table-multiplication></app-table-multiplication>
+
+<app-table-multiplication [n]="3"></app-table-multiplication>
