--- a/src/app/page-table-mult/page-table-mult.html
+++ b/src/app/page-table-mult/page-table-mult.html
@@ -1,3 +1,34 @@
-<app-table-multiplication></app-table-multiplication>
+<!-- <app-table-multiplication></app-table-multiplication>
 
-<app-table-multiplication [n]="3"></app-table-multiplication>
+<app-table-multiplication [n]="3"></app-table-multiplication> -->
+<span style="display:inline-block; margin-right:20px;">
+  <app-table-multiplication [n]="1"></app-table-multiplication>
+</span>
+<span style="display:inline-block; margin-right:20px;">
+  <app-table-multiplication [n]="2"></app-table-multiplication>
+</span>
+<span style="display:inline-block; margin-right:20px;">
+  <app-table-multiplication [n]="3"></app-table-multiplication>
+</span>
+<span style="display:inline-block; margin-right:20px;">
+  <app-table-multiplication [n]="4"></app-table-multiplication>
+</span>
+<span style="display:inline-block; margin-right:20px;">
+  <app-table-multiplication [n]="5"></app-table-multiplication>
+</span>
+<span style="display:inline-block; margin-right:20px;">
+  <app-table-multiplication [n]="6"></app-table-multiplication>
+</span>
+<span style="display:inline-block; margin-right:20px;">
+  <app-table-multiplication [n]="7"></app-table-multiplication>
+</span>
+<span style="display:inline-block; margin-right:20px;">
+  <app-table-multiplication [n]="8"></app-table-multiplication>
+</span>
+<span style="display:inline-block; margin-right:20px;">
+  <app-table-multiplication [n]="9"></app-table-multiplication>
+</span>
+<span style="display:inline-block; margin-right:20px;">
+  <app-table-multiplication [n]="10"></app-table-multiplication>
+</span>
+
