Choix affichage des tables

--- a/src/app/component/table-multiplication/table-multiplication.html
+++ b/src/app/component/table-multiplication/table-multiplication.html
@@ -1,6 +1,6 @@
 <div class="box center-div">
     <ul class="align-left">
-        <li>Table de : {{n}}</li>
+        <li>Table de {{n}}</li>
         <li>
             <pre>---------</pre>
         </li>
