Lien du footer fait pour la Section Liens utiles et Multiapp dans header à une nouvelle couleur

--- a/src/app/component/footer/footer.html
+++ b/src/app/component/footer/footer.html
@@ -2,7 +2,7 @@
 <footer class="bg-dark text-white pt-4 pb-2 mt-auto">
   <div class="container text-center text-md-left">
     <div class="row">
-      
+
       <!-- Section À propos -->
       <div class="col-md-4 mb-3">
         <h5>À propos</h5>
@@ -14,8 +14,8 @@
         <h5>Liens utiles</h5>
         <ul class="list-unstyled">
           <li><a href="#" class="text-white text-decoration-none">Accueil</a></li>
-          <li><a href="#" class="text-white text-decoration-none">Tables de multiplication</a></li>
-          <li><a href="#" class="text-white text-decoration-none">Documentation Angular</a></li>
+          <li><a href="/table-multiplication" class="text-white text-decoration-none">Tables de multiplication</a></li>
+          <li><a href="https://angular.dev" class="text-white text-decoration-none" target="_blank"  rel="noopener noreferrer">Documentation Angular</a></li>
         </ul>
       </div>
 
